[project]
name = "trustybot-generativeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-huggingface>=1.2.1",
    "openai>=2.24.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trustguard>=0.2.4",
]
